--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "js-advanced-project-fortune-game",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.ejs",
   "scripts": {
     "devStart": "nodemon server.js"
   },
