--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "ejs": "^3.1.8",
     "express": "^4.18.2",
+    "firebase": "^9.15.0",
     "socket.io": "^4.5.4",
     "socket.io-client": "^4.5.4"
   },
